# ai.faq.chat

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  biome.json  fly.toml  install.sh  package.json  pnpm-lock.yaml  turbo.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
.windsurf/rules/: README.md  api.md  general.md  git.md  performance.md  python.md  react.md  security.md  testing.md  typescript.md
.windsurf/skills/deploy-to-fly/: SKILL.md
apps/api/: .env.production  .gitignore  answers.json  api.py  build.py  chat_service.py  config.py  context.py  embed.py  engine.py  exceptions.py  faq.json  logging_config.py  main.py  middleware.py  package.json  pyproject.toml  requirements.txt  response.py  settings.py  test.sh
apps/api/tests/: conftest.py  test_api.py  test_chat_service.py  test_engine.py  test_engine_integration.py  test_main.py  test_middleware.py
apps/web/: .env.production  biome.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  main.css  main.tsx  theme.class.css  theme.css  types.ts  wdyr.ts
apps/web/src/api/: chatClient.ts
apps/web/src/components/: Chat.tsx  ErrorBoundary.tsx  Header.tsx  Message.tsx  MessageInput.tsx  Messages.tsx  TypingIndicator.tsx
apps/web/src/hooks/: useTheme.ts
apps/web/src/providers/: theme-context.tsx  theme.tsx
apps/web/src/test/: setup.ts
apps/web/src/utils/: fetchAnswer.ts  fetchResponse.ts  flattenContent.ts  index.ts  isJSON.ts
(+5 files in other folders)
